--- a/calculator/index.html
+++ b/calculator/index.html
@@ -8,7 +8,7 @@
     <title>calculator</title>
 </head>
 <body>
-    <centre><h1 style="font-family: Garamond, serif";>CALCULATOR</h1></centre>
+    
     <div class="container">
         <div class="calculator dark">
             <div class="theme-toggler active">
@@ -23,7 +23,7 @@
                         <td><button class="btn-operator" id="clear">C</button></td>
                         <td><button class="btn-operator" id="/">&divide;</button></td>
                         <td><button class="btn-operator" id="*">&times;</button></td>
-                        <td><button class="btn-operator" id="backspace"></button></td>
+                        <td><button class="btn-operator" id="backspace">⌫</button></td>
                     </tr>
                     <tr>
                         <td><button class="btn-number" id="7">7</button></td>
